--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,18 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "[javascript]": {
-        "editor.formatOnSave": true
+        "editor.formatOnSave": false,
+        "editor.defaultFormatter": "vscode.typescript-language-features"
     },
     "[javascriptreact]": {
-        "editor.formatOnSave": true
+        "editor.formatOnSave": false
     },
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit"
     },
-    "eslint.alwaysShowStatus": true
+    "eslint.alwaysShowStatus": true,
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    }
 }
