--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-racxstudio",
+  "name": "tailwind-gennygift",
   "version": "0.2.0",
   "private": true,
   "dependencies": {
